--- a/HeadacheCDSSWeb/HeadacheCDSSWeb.csproj
+++ b/HeadacheCDSSWeb/HeadacheCDSSWeb.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Models\Diagnosis.cs">
       <DependentUpon>HeadacheDataModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\diaryData.cs" />
     <Compile Include="Models\DiaryDataPoint.cs" />
     <Compile Include="Models\DisabilityEvaluation.cs">
       <DependentUpon>HeadacheDataModel.tt</DependentUpon>
@@ -87,21 +88,6 @@
       <DependentUpon>HeadacheDataModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\GADQuestionaire.cs">
-      <DependentUpon>HeadacheDataModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\HDAcompanion.cs">
-      <DependentUpon>HeadacheDataModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\HDheadacheplace.cs">
-      <DependentUpon>HeadacheDataModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\HDHeadacheProdrome.cs">
-      <DependentUpon>HeadacheDataModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\HDMitigatingFactors.cs">
-      <DependentUpon>HeadacheDataModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\HDPrecipitatingFactor.cs">
       <DependentUpon>HeadacheDataModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\HeadacheAccompany.cs">
@@ -207,25 +193,40 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-datetimepicker.min.css" />
+    <Content Include="Content\bootstrap-combined.min.css" />
+    <Content Include="Content\datepicker.css" />
+    <Content Include="Content\images\034.png" />
     <Content Include="Content\images\accodion_bg.png" />
+    <Content Include="Content\images\accordion_arrows.png" />
     <Content Include="Content\images\arrow.png" />
+    <Content Include="Content\images\blank.gif" />
     <Content Include="Content\images\box1.png" />
     <Content Include="Content\images\box2.png" />
     <Content Include="Content\images\box3.png" />
     <Content Include="Content\images\calendar.png" />
+    <Content Include="Content\images\calendar_arrows.png" />
+    <Content Include="Content\images\cancel %281%29.png" />
+    <Content Include="Content\images\cancel.png" />
     <Content Include="Content\images\chart.png" />
     <Content Include="Content\images\circle-blue.png" />
     <Content Include="Content\images\circle-orange.png" />
     <Content Include="Content\images\click-button.png" />
+    <Content Include="Content\images\close.png" />
+    <Content Include="Content\images\combo_arrow.png" />
     <Content Include="Content\images\Content.png" />
+    <Content Include="Content\images\cross.png" />
+    <Content Include="Content\images\datebox_arrow.png" />
     <Content Include="Content\images\delete.png" />
     <Content Include="Content\images\dropdown.png" />
     <Content Include="Content\images\foot-2.png" />
     <Content Include="Content\images\foot.png" />
+    <Content Include="Content\images\glyphicons-halflings.png" />
     <Content Include="Content\images\gnome_edit_delete.png" />
     <Content Include="Content\images\head.png" />
     <Content Include="Content\images\header.png" />
     <Content Include="Content\images\hover-button.png" />
+    <Content Include="Content\images\layout_arrows.png" />
     <Content Include="Content\images\login\content.png" />
     <Content Include="Content\images\login\footer.png" />
     <Content Include="Content\images\login\head.png" />
@@ -256,6 +257,9 @@
     <Content Include="Content\images\wbox\wbox.gif" />
     <Content Include="Content\images\wbox\wbox.png" />
     <Content Include="Content\images\wbox\wbox2.gif" />
+    <Content Include="Content\images\x %281%29.png" />
+    <Content Include="Content\images\x %282%29.png" />
+    <Content Include="Content\images\x.png" />
     <Content Include="Content\images\二维码.png" />
     <Content Include="Content\indexstyle.css" />
     <Content Include="Content\jqpagination.css" />
@@ -298,7 +302,9 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Models\HeadacheModel.edmx.sql" />
+    <Content Include="Scripts\bootstrap-datepicker.js" />
     <Content Include="Scripts\Diagnosis\ReporterOperation.js" />
+    <Content Include="Scripts\jqplot.dateAxisRenderer.js" />
     <Content Include="Scripts\jquery-1.5.1-vsdoc.js" />
     <Content Include="Scripts\jquery-1.5.1.js" />
     <Content Include="Scripts\jquery-1.5.1.min.js" />
@@ -311,11 +317,14 @@
     <Content Include="Scripts\jquery.jqpagination.min.js" />
     <Content Include="Scripts\jquery.json-2.4.js" />
     <Content Include="Scripts\jquery.json-2.4.min.js" />
+    <Content Include="Scripts\jquery.min.js" />
     <Content Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\modernizr-1.7.js" />
     <Content Include="Scripts\modernizr-1.7.min.js" />
+    <Content Include="Scripts\plugins\bootstrap-datetimepicker.js" />
+    <Content Include="Scripts\plugins\bootstrap-datetimepicker.min.js" />
     <Content Include="Scripts\plugins\bootstrap.js" />
     <Content Include="Scripts\plugins\bootstrap.min.js" />
     <Content Include="Scripts\plugins\excanvas.js" />
@@ -323,6 +332,7 @@
     <Content Include="Scripts\plugins\jqplot.canvasAxisLabelRenderer.min.js" />
     <Content Include="Scripts\plugins\jqplot.canvasTextRenderer.min.js" />
     <Content Include="Scripts\plugins\jqplot.categoryAxisRenderer.min.js" />
+    <Content Include="Scripts\plugins\jqplot.dateAxisRenderer.min.js" />
     <Content Include="Scripts\plugins\jqplot.donutRenderer.min.js" />
     <Content Include="Scripts\plugins\jqplot.pieRenderer.min.js" />
     <Content Include="Scripts\plugins\jquery-1.8.3.js" />
@@ -340,7 +350,9 @@
     <Content Include="Views\Shared\Regionview.cshtml" />
     <Content Include="Views\Shared\PatlistForRe.cshtml" />
     <Content Include="Views\Diagnosis\Push.cshtml" />
-    <None Include="Web References\localhost\InferenceService.wsdl" />
+    <None Include="Web References\localhost\InferenceService.wsdl">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Web References\localhost\Reference.map">
       <Generator>MSDiscoCodeGenerator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
@@ -470,7 +482,7 @@
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>19367</DevelopmentServerPort>
+          <DevelopmentServerPort>23849</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>
           </IISUrl>
