--- a/HeadacheCDSSWeb/Properties/Settings.settings
+++ b/HeadacheCDSSWeb/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="HeadacheCDSSWeb_WebReference_InferenceService" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">http://localhost:51301/InferenceService.asmx</Value>
+      <Value Profile="(Default)">http://115.28.42.235/HeadacheInferenceService/InferenceService.asmx</Value>
     </Setting>
     <Setting Name="HeadacheCDSSWeb_localhost_InferenceService" Type="(Web Service URL)" Scope="Application">
       <Value Profile="(Default)">http://localhost/HeadacheInferenceService/InferenceService.asmx</Value>
