--- a/HeadacheCDSSWeb/HeadacheCDSSWeb.csproj
+++ b/HeadacheCDSSWeb/HeadacheCDSSWeb.csproj
@@ -79,12 +79,14 @@
     <Compile Include="Controllers\DAccountController.cs" />
     <Compile Include="Controllers\DiagnosisController.cs" />
     <Compile Include="Controllers\EnterPatInforController.cs" />
+    <Compile Include="Controllers\NationController.cs" />
     <Compile Include="Controllers\RegionController.cs" />
     <Compile Include="Controllers\ViewPatRecordController.cs" />
-    <Compile Include="Filters\AuthorizeActionFilter.cs" />
+    <Compile Include="Models\Filters\AuthorizeActionFilter.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\register.cs" />
     <Compile Include="Models\tableData.cs" />
     <Compile Include="Models\Diagnosis.cs">
       <DependentUpon>HeadacheDataModel.tt</DependentUpon>
@@ -207,6 +209,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap\bootstrap-theme.css" />
+    <Content Include="Content\bootstrap\bootstrap-theme.min.css" />
+    <Content Include="Content\bootstrap\bootstrap.css" />
+    <Content Include="Content\bootstrap\bootstrap.min.css" />
     <Content Include="Content\bootstrap-datetimepicker.min.css" />
     <Content Include="Content\bootstrap-combined.min.css" />
     <Content Include="Content\datepicker.css" />
@@ -327,6 +333,8 @@
     <Content Include="Content\Site.css" />
     <Content Include="Models\HeadacheModel.edmx.sql" />
     <Content Include="Scripts\bootstrap-datepicker.js" />
+    <Content Include="Scripts\bootstrap.js" />
+    <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\Diagnosis\ReporterOperation.js" />
     <Content Include="Scripts\jqplot.dateAxisRenderer.js" />
     <Content Include="Scripts\jquery-1.5.1-vsdoc.js" />
@@ -366,6 +374,7 @@
     <Content Include="Scripts\plugins\jquery.jqplot.min.js" />
     <Content Include="Scripts\plugins\jquery.maphilight.js" />
     <Content Include="Scripts\plugins\jquery.min.js" />
+    <Content Include="Scripts\plugins\modal.js" />
     <Content Include="Scripts\wbox-min.js" />
     <Content Include="Scripts\wbox.js" />
     <Content Include="Scripts\zebra_datepicker.js" />
@@ -380,6 +389,7 @@
     <None Include="ClassDiagram1.cd" />
     <Content Include="Views\Shared\AdviceList.cshtml" />
     <None Include="Content\images\Sorting icons.psd" />
+    <Content Include="Views\Nation\Index.cshtml" />
     <None Include="Web References\localhost\InferenceService.wsdl">
       <SubType>Designer</SubType>
     </None>
@@ -491,9 +501,7 @@
       <CachedSettingsPropName>HeadacheCDSSWeb_localhost_InferenceService</CachedSettingsPropName>
     </WebReferenceUrl>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Content\bootsrap\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
