--- a/HeadacheCDSSWeb/Web.config
+++ b/HeadacheCDSSWeb/Web.config
@@ -53,7 +53,7 @@
   </runtime>
   <connectionStrings>
     <!--<add name="HeadacheModelContainer" connectionString="metadata=res://*/Models.HeadacheModel.csdl|res://*/Models.HeadacheModel.ssdl|res://*/Models.HeadacheModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=115.28.42.235\CDSSDATABASE;initial catalog=HeadacheDiary;user id=sa;password=123456;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="HeadacheModelContainer" connectionString="metadata=res://*/Models.HeadacheModel.csdl|res://*/Models.HeadacheModel.ssdl|res://*/Models.HeadacheModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WJQ-PC;initial catalog=HeadacheWeb;user id=test;password=test;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="HeadacheModelContainer" connectionString="metadata=res://*/Models.HeadacheModel.csdl|res://*/Models.HeadacheModel.ssdl|res://*/Models.HeadacheModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WJQ-PC;initial catalog=HeadacheWebsite;user id=test;password=test;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <applicationSettings>
     <HeadacheCDSSWeb.Properties.Settings>
